[gd_scene load_steps=2 format=3 uid="uid://px3qefjyy0lb"]

[ext_resource type="Script" uid="uid://dy3686j21hfco" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_n87rw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "resume"
flat = true

[node name="Button2" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "optinos
"
flat = true

[node name="menu" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "menu"
flat = true

[connection signal="pressed" from="Control/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/menu" to="." method="_on_menu_pressed"]
